--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -7,21 +7,23 @@
     transition: all 0.3s ease-in-out;
     width: 400px;
     height: 150px;
+    
+   
   }
   
   .home-invites-card:hover {
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.5);
     transform: scale(1.05);
   }
+  .home-bg-container{
+    max-height: 100vh;
+  }
   
   
-/* .home-invites-card{
-    background-color: grey;
-    
-}
+
 .home-charts-align{
     width:100%;
-}*/
+}
 
 .container-fluid{
     padding-left: 0px;
