--- a/src/components/StudentGraph/index.css
+++ b/src/components/StudentGraph/index.css
@@ -1,5 +1,10 @@
-  .charts-bg-container{
-    margin-top: 50px;
-    width: 90%;
-    height: 80%;
+.charts-bg-container {
+  margin-top: 30px;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .charts-bg-container {
+    margin-top: 100px;
   }
+}
