--- a/src/components/Profile/index.css
+++ b/src/components/Profile/index.css
@@ -19,7 +19,7 @@
   
   .profile-container {
     background-color: #ffffff;
-    height: 200px;
+    height: 250px;
     width: 80%;
     border-radius: 15px;
     color: rgb(41, 44, 47);
@@ -30,5 +30,11 @@
   .profile-container:hover {
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.5);
     transform: scale(1.05);
+  }
+  .profile-img{
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    margin-bottom: 10px;
   }
   
