--- a/src/components/StudentGraph/index.css
+++ b/src/components/StudentGraph/index.css
@@ -1,6 +1,6 @@
 .charts-bg-container {
-  margin-top: 30px;
-  width: 100%;
+  height: 60vh;
+    margin-top: 100px;
 }
 
 @media screen and (min-width: 768px) {
