--- a/src/components/Questions/index.css
+++ b/src/components/Questions/index.css
@@ -1,21 +1,55 @@
 .quiz-bg-container {
   height: 100vh;
+ 
+}
+.quiz-total-container{
+  height: 100vh;
+  width: 100%;
+}
+.form-btns{
+  height: 55px;
 }
 .question-form-container {
-  width: 550px;
-  height: 300px;
+  width: 35%;
+  height: 40%;
+
+  border: solid 1px;
+ border-radius: 25px;
+  padding: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px  ;
 }
 .question {
   background-color: white;
   border-radius: 5px;
-  width: 600px;
+  width: 100%;
   box-shadow: 0 0.5px 0.5px;
   margin: 10px;
 }
 .question-heading {
-  font-size: 25px;
+  font-size: 130%;
 }
 .question-options {
-  font-size: 20px;
+  font-size: 100%;
+  margin: 0px;
+}
+@media (max-width: 768px) {
+  .question-heading {
+    font-size:50%;
+  }
+  .question-options {
+    font-size: 70%;
+    margin: 0px;
+  }
+  .question-form-container {
+    width: 30%;
+    height: 30%;
+  
+    border: solid 1px;
+   border-radius: 20px;
+    padding: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px  ;
+  }
 }
 
