--- a/src/components/Questions/index.css
+++ b/src/components/Questions/index.css
@@ -1,23 +1,30 @@
 .quiz-bg-container {
   height: 100vh;
- 
 }
-.quiz-total-container{
+.quiz-total-container {
   height: 100vh;
   width: 100%;
 }
-.form-btns{
-  height: 55px;
+.form-btns {
+  background-color: transparent;
+  border: none;
+  color: #333;
 }
-.question-form-container {
-  width: 35%;
-  height: 40%;
 
+.form-btns:hover {
+  background-color: transparent;
+  border: none;
+  color: #333;
+}
+
+.question-form-container {
+  width: 40%;
+  height: 40%;
   border: solid 1px;
- border-radius: 25px;
-  padding: 60px;
+  border-radius: 25px;
+  padding: 30px;
   padding-top: 30px;
-  padding-bottom: 30px  ;
+  padding-bottom: 30px;
 }
 .question {
   background-color: white;
@@ -35,21 +42,19 @@
 }
 @media (max-width: 768px) {
   .question-heading {
-    font-size:50%;
+    font-size: 50%;
   }
   .question-options {
     font-size: 70%;
     margin: 0px;
   }
   .question-form-container {
-    width: 30%;
+    width: 70%;
     height: 30%;
-  
     border: solid 1px;
-   border-radius: 20px;
+    border-radius: 20px;
     padding: 30px;
     padding-top: 10px;
-    padding-bottom: 10px  ;
+    padding-bottom: 10px;
   }
 }
-
