--- a/src/components/AdminTable/index.css
+++ b/src/components/AdminTable/index.css
@@ -1,73 +1,70 @@
-.admin-nowrap{
-    white-space: nowrap;
+.admin-nowrap {
+  white-space: nowrap;
 }
-.admin-table-container{
-    width: 80%;
+.admin-table-container {
+  width: 80%;
 }
 
-.invite-model-btn-yes{
+.invite-model-btn-yes {
   margin-right: 20px;
-  
 }
 button:hover {
   background-color: #ff0000;
   color: #ffffff;
 }
-.admin-table-search-input{
+.admin-table-search-input {
   width: 250px;
 }
-.admin-table-checkbox-input{
+.admin-table-checkbox-input {
   width: 250px;
   margin-left: 30px;
   font-size: 20px;
 }
 .invite-btn {
-    font-size: 16px;
-    padding: 5px 10px;
-  }
-  .admin-table-align{
-    height: 500px;
-  }
+  font-size: 16px;
+  padding: 5px 10px;
+}
+.admin-table-align {
+  height: 500px;
+}
 .admin-table {
-    font-size: 12px;
-  }
-  
-  @media (min-width: 576px) {
-    .table {
-      font-size: 10px;
-    }
-    .invite-btn {
-        font-size: 15px;
-        padding: 3px 6px;
-      }
-      .admin-addstudent-btn{
-        font-size: 15px;
-        padding: 3px 6px;
-      }
-  }
+  font-size: 12px;
+}
 
-  
-  @media (min-width: 768px) {
-    .table {
-      font-size: 15px;
-    }
-    .invite-btn {
-        font-size: 22px;
-        padding: 8px 16px;
-      }
+@media (min-width: 576px) {
+  .table {
+    font-size: 10px;
   }
-  
-  @media (min-width: 992px) {
-    .table {
-      font-size: 18px;
-    }
-    .invite-btn {
-        font-size: 15px;
-        padding: 10px 20px;
-      }
+  .invite-btn {
+    font-size: 15px;
+    padding: 3px 6px;
   }
+  .admin-addstudent-btn {
+    font-size: 15px;
+    padding: 3px 6px;
+  }
+}
 
-  
+@media (min-width: 768px) {
+  .table {
+    font-size: 15px;
+  }
+  .invite-btn {
+    font-size: 22px;
+    padding: 8px 16px;
+  }
+}
+
+@media (min-width: 992px) {
+  .table {
+    font-size: 18px;
+  }
+  .invite-btn {
+    font-size: 15px;
+    padding: 10px 20px;
+  }
+}
+
 .spinner-container {
   position: absolute;
   top: 50%;
@@ -75,7 +72,16 @@ button:hover {
 
   /* transform: translate(-50%, -50%); */
 }
-.spinner{
+.spinner {
   width: 30px;
   height: 30px;
+}
+
+.student-link {
+  color: #212529;
+  text-decoration: none;
+}
+
+.student-link:hover {
+  color: #126ffc;
 }
